<resources>
    <string name="app_name">Time Saver</string>

    <string name="start_semester_text">Let\'s build your class schedule</string>
    <string name="start_course_text">Which courses do you study this semester?</string>
    <string name="year_choice">Please choose year:</string>
    <string name="semester_choice">Please choose semester:</string>
    <string name="semester_start">Semester start date:</string>
    <string name="semester_end">Semester end date:</string>
    <string name="course_name">Course name:</string>
    <string name="add_course">Add another course</string>
    <string name="confirm">Confirm</string>
    <string name="instance_text">When do you study those courses?</string>
    <string name="course_date">Day Taken:</string>
    <string name="course_start_hour">Start Hour:</string>
    <string name="course_end_hour">End Hour:</string>
    <string name="add_instance">Add another instance</string>
    <string name="dashboard">The Dashboard</string>
    <string name="dashboard_today">Today\'s Activity</string>
    <string name="tasks_due"># Tasks Due</string>
    <string name="dashboard_courses"># Number of courses</string>
    <string name="total_tasks_done"># Total tasks done</string>
    <string name="tomorrows_activity">Tomorrow\'s Activity</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="select_semester">Select Semester</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="professor_name">Professor Name:</string>
    <string name="enter_professor_name">Enter Professor Name</string>
    <string name="select_course">Select Course</string>
    <string name="auth_failed">Login Error occurd please try again</string>
    <string name="add_another_semester">add another semester</string>
    <string name="click_here">Click Here</string>
    <string name="menu">Menu</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_closed">drawer_closed</string>

    <string-array name="semester_type">
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>

    <string name="title_activity_base">BaseActivity</string>
    <string name="task_manager_headline">Task Manager</string>
    <string name="add_task_description">Description</string>
    <string name="add_task_due_date">Due Date</string>
    <string name="add_task_dialog_description">add_task_dialog_Description</string>
    <string name="add_task_dialog_due_date">Due Date</string>
    <string name="notifications">Notifications</string>
    <string name="utilities">Utilities</string>
    <string name="sync_with_google_calendar">Sync with Google Calendar</string>
    <string name="time_to_receive_notification">Notification Time</string>
    <string name="add_instance_select_semester">Select Semester</string>

</resources>
