<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add_semester"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

    <TextView
        android:id="@+id/start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_semester_text"
        android:textStyle="bold"
        android:textSize="@dimen/large_text_size"
        android:layout_marginBottom="@dimen/default_margin"/>


    <TextView
        android:id="@+id/year_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_choice"
        android:textSize="@dimen/default_text_size"
        android:layout_below="@+id/start_text"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/default_margin"/>


    <Spinner
        android:id="@+id/year_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/year_choice"
        android:layout_below="@+id/start_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/default_margin"/>


    <TextView
        android:id="@+id/semester_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semester_choice"
        android:textSize="@dimen/default_text_size"
        android:layout_below="@+id/year_choice"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/default_margin"/>


    <Spinner
        android:id="@+id/semester_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/semester_choice"
        android:layout_below="@+id/year_choice"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:entries="@array/semester_type"/>


    <TextView
        android:id="@+id/start_date_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semester_start"
        android:textSize="@dimen/default_text_size"
        android:layout_below="@+id/semester_choice"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/default_margin"/>


    <TextView
        android:id="@+id/start_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/start_date_choice"
        android:layout_below="@+id/semester_choice"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:textSize="@dimen/default_text_size"
        android:text="@string/click_here"
        android:layout_marginStart="@dimen/default_margin"/>


    <TextView
        android:id="@+id/end_date_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semester_end"
        android:textSize="@dimen/default_text_size"
        android:layout_below="@+id/start_date_choice"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/default_margin" />


    <TextView
        android:id="@+id/end_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/end_date_choice"
        android:layout_below="@+id/start_date_choice"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/large_margin"
        android:textSize="@dimen/default_text_size"
        android:text="@string/click_here"
        android:layout_marginStart="@dimen/default_margin"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button_add_semester"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_another_semester" />

        <Button
            android:id="@+id/button_confirm_add_semester"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />

    </LinearLayout>
</RelativeLayout>