<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add_course"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/small_margin">

    <TextView
        android:id="@+id/create_course_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_course_text"
        android:textStyle="bold"
        android:textSize="@dimen/large_text_size"
        android:layout_marginBottom="@dimen/small_margin"/>

    <TextView
        android:id="@+id/select_semester_from_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_course_headline"
        android:text="@string/select_semester"
        android:textSize="@dimen/default_text_size"/>

    <Spinner
        android:id="@+id/semester_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_course_headline"
        android:layout_toEndOf="@id/select_semester_from_spinner"/>

    <TextView
        android:id="@+id/course_name_to_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/course_name"
        android:layout_below="@id/select_semester_from_spinner"
        android:textSize="@dimen/default_text_size"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/course_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/course_name_to_create"
        android:hint="@string/enter_course_name"
        android:layout_marginBottom="@dimen/small_margin"/>

    <Button
        android:id="@+id/button_confirm_add_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/confirm" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_course_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:src="@drawable/ic_plus_sign"/>

</RelativeLayout>