<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_dashboard"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/small_margin">

    <TextView
        android:id="@+id/dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:textStyle="bold|italic"
        android:textSize="@dimen/large_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dashboard"
        android:layout_margin="@dimen/large_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_today"
            android:textStyle="bold"
            android:textSize="@dimen/default_text_size"/>

        <TableLayout
            android:id="@+id/dashboard_table_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin">

            <TableRow
                android:id="@+id/table_row_tasks_due"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_tasks_due"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tasks_due"
                    android:contentDescription="@string/tasks_due" />

                <TextView
                    android:id="@+id/dashboard_num_of_tasks_due_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="@dimen/large_margin"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="@dimen/extra_large_margin"
                    android:textStyle="bold"
                    android:textSize="@dimen/small_text_size"
                    android:text="@string/tasks_due"/>
            </TableRow>


            <TableRow
                android:id="@+id/table_total_tasks_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin">

                <ImageView
                    android:id="@+id/image_total_tasks_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/total_tasks_done"
                    android:contentDescription="@string/total_tasks_done" />

                <TextView
                    android:id="@+id/dashboard_total_tasks_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="@dimen/large_margin"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="@dimen/extra_large_margin"
                    android:textStyle="bold"
                    android:textSize="@dimen/small_text_size"
                    android:text="@string/total_tasks_done"/>
            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_large_margin"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold"
            android:text="@string/tomorrows_activity"/>

        <TableLayout
            android:id="@+id/dashboard_table_tomorrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin">

            <TableRow
                android:id="@+id/table_row_tasks_due_tomorrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_tasks_due_tomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tasks_due"
                    android:contentDescription="@string/tasks_due" />

                <TextView
                    android:id="@+id/dashboard_num_of_tasks_due_tomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="@dimen/large_margin"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="@dimen/extra_large_margin"
                    android:textStyle="bold"
                    android:textSize="@dimen/small_text_size"
                    android:text="@string/tasks_due"/>
            </TableRow>

            <TableRow
                android:id="@+id/table_row_class_tomorrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin">

                <ImageView
                    android:id="@+id/image_classes_tomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/classes_today"
                    android:contentDescription="@string/dashboard_courses" />

                <TextView
                    android:id="@+id/dashboard_num_of_classes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="@dimen/large_margin"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="@dimen/extra_large_margin"
                    android:textStyle="bold"
                    android:textSize="@dimen/small_text_size"
                    android:text="@string/dashboard_courses"/>
            </TableRow>

        </TableLayout>

    </LinearLayout>

    </RelativeLayout>
